# 2025-final-individual-ovflwed

solution/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
solution/deploy/: Caddyfile
solution/deploy/grafana/dashboards/: dashboard.json  dashboard.yml
solution/deploy/grafana/datasources/: postgres.yml
solution/docs/: arch.md  endpoints.md  flow.md
solution/src/ad_platform/application/interactors/: click_ad.py  create_campaign.py  create_score.py  delete_campaign.py  di.py  get_ad.py  get_advertiser_stats.py  get_campaign_stats.py  get_campaigns.py  update_campaign.py
solution/src/ad_platform/application/services/: ads.py  advertiser.py  campaigns.py  client.py  di.py  stats_service.py  time.py
solution/src/ad_platform/domain/: entities.py  exceptions.py
solution/src/ad_platform/infrastructure/cache/: common.py  config.py  di.py  impl.py
solution/src/ad_platform/infrastructure/db/: commiter.py  config.py  di.py
solution/src/ad_platform/infrastructure/storage/: common.py  config.py  di.py  impl.py
solution/src/ad_platform/presentation/: di.py
solution/src/ad_platform/presentation/api/: main.py
solution/tests/: conftest.py
solution/tests/test_e2e/ads/: test_ads.py  test_ads_validation.py
solution/tests/test_e2e/advertisers/: test_advertiser_db.py  test_advertiser_validation.py
solution/tests/test_e2e/campaigns/: test_campaign_crud.py  test_campaign_validation.py
solution/tests/test_e2e/clients/: test_client_db.py  test_client_validation.py
solution/tests/test_e2e/stats/: test_stats.py
(+24 files in other folders)
